core/tests/snapshots/scripts__regex_replace.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (regex_replace), \".rain\")).unwrap()"
---
String(
    "elephant <> <> dog <>",
)
