core/tests/snapshots/scripts__string_add.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (string_add), \".rain\")).unwrap()"
---
String(
    "helloworld",
)
