core/tests/snapshots/scripts__strings.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/strings.rain\").unwrap()"
---
Boolean(
    true,
)
