core/tests/snapshots/scripts__trailing_commas.snap
---
source: core/tests/scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (trailing_commas), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        24,
    ),
)
