core/tests/snapshots/scripts__type_checks.snap
---
source: core/tests/scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (type_checks), \".rain\")).unwrap()"
---
Integer(
    RainInteger(
        6,
    ),
)
