core/tests/snapshots/scripts__underscore.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/underscore.rain\").unwrap()"
---
Integer(
    RainInteger(
        1,
    ),
)
