core/tests/snapshots/scripts__utf8.snap
---
source: core/tests/scripts.rs
expression: "run(\"tests/scripts/utf-8.rain\").unwrap()"
---
String(
    "rain",
)
